[project]
name = "stockflow"
version = "0.1.0"
description = "Poetry package as virtual env for mpc project"
authors = [
    {name = "Matteo Gevi",email = "matteogevi97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyrfc>=2.8.0",
    "python-dotenv>=1.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
