[project]
name = "stockflow"
version = "0.1.0"
description = "Poetry package as virtual env for mpc project"
authors = [
    {name = "Matteo Gevi",email = "matteogevi97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv>=1.0.0",
    "mpc (>=0.0.6,<0.0.7)",
    "langchain (>=0.3.21,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "frappe-client>=2.1.0",
    "requests>=2.31.0"
]

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
